fix error build (#3)
* add code base

* Add common file for gateway and authen

* Fix maven build

* update maven build

* fix error build